[package]
name = "glsl-optimizer-sys"
version = "0.1.0"
authors = ["Mathew Velasquez <mathewvq@gmail.com>"]
description = "An FFI interface to glsl-optimizer."
repository = "https://github.com/mathewv/rust-glsl-optimizer-sys"
readme = "README.md"
keywords = ["glsl", "opengl", "opengles", "gles", "optimizer"]
license = "MIT"

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
